[gd_scene load_steps=22 format=3 uid="uid://oa63y5s47uoc"]

[ext_resource type="Script" path="res://scenes/ui/main menu/menu_2.gd" id="1_tokyp"]
[ext_resource type="SystemFont" uid="uid://cfutx4nn4bt4g" path="res://assets/fonts/treasure_font.tres" id="2_1ysgi"]
[ext_resource type="Texture2D" uid="uid://brera858f6xmw" path="res://assets/sprites/temp_dragon.png" id="3_5o7r1"]
[ext_resource type="Texture2D" uid="uid://c7tu3jsnqek45" path="res://assets/sprites/fire_text_sprite_sheet.png" id="3_ctgm5"]
[ext_resource type="Shader" path="res://assets/shaders/flipbook.gdshader" id="3_ov153"]
[ext_resource type="AudioStream" uid="uid://damcqxwlo5wj7" path="res://assets/sounds/theme.mp3" id="6_igmxh"]
[ext_resource type="AudioStream" uid="uid://dlyr51wnd2ud6" path="res://assets/sounds/explosion_filtered.wav" id="6_pjqt3"]
[ext_resource type="AudioStream" uid="uid://cfw5fq2cbc04s" path="res://assets/sounds/roar.wav" id="7_31j0s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eqwxp"]
bg_color = Color(0.0901961, 0.0313726, 0.00784314, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sdmxs"]

[sub_resource type="LabelSettings" id="LabelSettings_m0a4y"]
font = ExtResource("2_1ysgi")
font_size = 80
font_color = Color(1, 0.627451, 0.0823529, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sy57r"]
shader = ExtResource("3_ov153")
shader_parameter/cell_range = Vector2(5, 1)
shader_parameter/speed = 2.492

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wyrg1"]

[sub_resource type="SystemFont" id="SystemFont_ekt4o"]
font_names = PackedStringArray("Impact")
font_weight = 450

[sub_resource type="LabelSettings" id="LabelSettings_ot3q5"]
font = SubResource("SystemFont_ekt4o")
font_size = 80
font_color = Color(1, 0.627451, 0.0823529, 1)

[sub_resource type="SystemFont" id="SystemFont_cpaog"]
font_names = PackedStringArray("Impact")
font_weight = 450

[sub_resource type="LabelSettings" id="LabelSettings_qagoi"]
font = SubResource("SystemFont_cpaog")
font_size = 120
font_color = Color(1, 0.627451, 0.0823529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eg6bg"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_wjobh"]
resource_name = "IntroAnimation"
length = 3.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Part1/Reigning:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-124, -0.25, 0, 0.25, 0, 293, -0.1, -281.441, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Part1/Reigning:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(95, -0.25, 0, 0.25, 0, 95, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Part1/Fire:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(739, -0.25, 0, 0.25, 0, 292, -0.2, 446.401, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("Part1/Fire:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(186, -0.25, 0, 0.25, 0, 186, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("Part1/Reigning:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/path = NodePath("Part1/Reigning:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/path = NodePath("Part1/Reigning:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Part1/Reigning:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.5, 1.06876, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = false
tracks/8/path = NodePath("Part1/Fire:modulate:r")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = false
tracks/9/path = NodePath("Part1/Fire:modulate:g")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = false
tracks/10/path = NodePath("Part1/Fire:modulate:b")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Part1/Fire:modulate:a")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.5, 1.00692, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/12/type = "bezier"
tracks/12/imported = false
tracks/12/enabled = false
tracks/12/path = NodePath("White:modulate:r")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8, 1.1, 1.7)
}
tracks/13/type = "bezier"
tracks/13/imported = false
tracks/13/enabled = false
tracks/13/path = NodePath("White:modulate:g")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8, 1.1, 1.7)
}
tracks/14/type = "bezier"
tracks/14/imported = false
tracks/14/enabled = false
tracks/14/path = NodePath("White:modulate:b")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8, 1.1, 1.7)
}
tracks/15/type = "bezier"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("White:modulate:a")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.4, 0.118499, 1, 0, -0.00325656, 0.5, -0.00325656, -0.00469386, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8, 1.1, 2)
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Part1:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("Part2:visible")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("Explosion:playing")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/19/type = "value"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath("Roar:playing")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/20/type = "method"
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/path = NodePath(".")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/keys = {
"times": PackedFloat32Array(2.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_start_music"
}]
}
tracks/21/type = "value"
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/path = NodePath("White:visible")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/keys = {
"times": PackedFloat32Array(0, 2.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_lj4pr"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Part1/Reigning:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-124, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Part1/Reigning:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(95, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Part1/Fire:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(739, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Part1/Fire:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(186, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Part1/Reigning:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Part1/Reigning:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Part1/Reigning:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Part1/Reigning:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Part1/Fire:modulate:r")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Part1/Fire:modulate:g")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Part1/Fire:modulate:b")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Part1/Fire:modulate:a")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/12/type = "bezier"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("White:modulate:r")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/13/type = "bezier"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("White:modulate:g")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/14/type = "bezier"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("White:modulate:b")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/15/type = "bezier"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("White:modulate:a")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Part1:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("Part2:visible")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("Explosion:playing")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/19/type = "value"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath("Roar:playing")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/20/type = "value"
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/path = NodePath("White:visible")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wxdqh"]
_data = {
"IntroAnimation": SubResource("Animation_wjobh"),
"RESET": SubResource("Animation_lj4pr")
}

[node name="Menu2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tokyp")

[node name="Bkg" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eqwxp")

[node name="Part2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_sdmxs")

[node name="Part 2" type="VBoxContainer" parent="Part2"]
layout_mode = 2
offset_left = 286.0
offset_top = 159.0
offset_right = 866.0
offset_bottom = 488.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Part2/Part 2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 250
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="BeginButton" type="Button" parent="Part2/Part 2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "BEGIN!!"

[node name="MarginContainer2" type="MarginContainer" parent="Part2/Part 2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="QuitButton" type="Button" parent="Part2/Part 2/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
text = "quit"

[node name="Reigning" type="Label" parent="Part2"]
layout_mode = 2
offset_left = 293.0
offset_top = 95.0
offset_right = 873.0
offset_bottom = 193.0
text = "REIGNING"
label_settings = SubResource("LabelSettings_m0a4y")
horizontal_alignment = 1

[node name="Fire" type="TextureRect" parent="Part2"]
material = SubResource("ShaderMaterial_sy57r")
layout_mode = 0
offset_left = 442.0
offset_top = 154.0
offset_right = 720.0
offset_bottom = 365.0
texture = ExtResource("3_ctgm5")
expand_mode = 1

[node name="Dragon" type="TextureRect" parent="Part2"]
texture_filter = 1
layout_mode = 0
offset_left = 722.0
offset_top = -10.0
offset_right = 1205.0
offset_bottom = 318.0
rotation = -0.202458
texture = ExtResource("3_5o7r1")
stretch_mode = 5
flip_h = true

[node name="Part1" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_wyrg1")

[node name="Reigning" type="Label" parent="Part1"]
offset_left = -124.0
offset_top = 95.0
offset_right = 456.0
offset_bottom = 193.0
text = "REIGNING"
label_settings = SubResource("LabelSettings_ot3q5")
horizontal_alignment = 1

[node name="Fire" type="Label" parent="Part1"]
offset_left = 739.0
offset_top = 186.0
offset_right = 1319.0
offset_bottom = 334.0
text = "FIRE
"
label_settings = SubResource("LabelSettings_qagoi")
horizontal_alignment = 1

[node name="White" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eg6bg")
metadata/_edit_lock_ = true

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_pjqt3")
volume_db = 9.132
pitch_scale = 1.54

[node name="Roar" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_31j0s")
volume_db = 1.522
pitch_scale = 0.71

[node name="ThemePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_igmxh")
volume_db = -3.552

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wxdqh")
}

[connection signal="pressed" from="Part2/Part 2/MarginContainer/BeginButton" to="." method="_on_begin"]
[connection signal="pressed" from="Part2/Part 2/MarginContainer2/QuitButton" to="." method="_on_quit"]
